--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -1,24 +1,24 @@
 [twilio]
-twilio_sid = gdgdgs
-twilio_token = dfgdsg
-twilio_phone_number = dfsgdsgdg
+twilio_sid = AC8e97b31b36498c53c9674163a32c2f80
+twilio_token = bc3fae0c96f301cb8712b7a9d11d7da1
+twilio_phone_number = +18647138522
 
 [emergency_info]
-emergency_phone_number = dgdfsg
-emergency_address = dfgdfgs
-emergency_message = dfgdsg
+emergency_phone_number = +15189615258
+emergency_address = 115 Hoy Rd, Ithaca, NY 14850
+emergency_message = Hello World
 
 [naloxone_info]
 naloxone_expiration_date = Thu Nov 24 2022
 absolute_maximum_temperature = 40
 
 [admin]
-passcode = dfdfg
-admin_phone_number = dsgdfsg
+passcode = 123456
+admin_phone_number = +15189615258
 enable_sms = True
 
 [power_management]
 enable_power_saving = True
-active_hours_start_at = 00
+active_hours_start_at = 08
 active_hours_end_at = 18
 
