--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -6,19 +6,19 @@ twilio_phone_number = +18647138522
 [emergency_info]
 emergency_phone_number = +15189615258
 emergency_address = 115 Hoy Rd, Ithaca, NY 14850
-emergency_message = Hello World
+emergency_message = This is the test message
 
 [naloxone_info]
-naloxone_expiration_date = Thu Nov 24 2022
-absolute_maximum_temperature = 40
+naloxone_expiration_date = Fri Dec 9 2022
+absolute_maximum_temperature = 45
 
 [admin]
-passcode = 123456
+passcode = 147258
 admin_phone_number = +15189615258
 enable_sms = True
 
 [power_management]
-enable_power_saving = True
-active_hours_start_at = 08
-active_hours_end_at = 18
+enable_power_saving = False
+active_hours_start_at = 08:00
+active_hours_end_at = 18:45
 
