--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -9,16 +9,16 @@ emergency_address = 115 Hoy Rd, Ithaca, NY 14850
 emergency_message = This is the test message
 
 [naloxone_info]
-naloxone_expiration_date = Fri Dec 9 2022
-absolute_maximum_temperature = 45
+naloxone_expiration_date = Fri Apr 7 2023
+absolute_maximum_temperature = 50
 
 [admin]
-passcode = 147258
+passcode = 123456
 admin_phone_number = +15189615258
 enable_sms = True
 
 [power_management]
-enable_power_saving = False
-active_hours_start_at = 08:00
+enable_power_saving = True
+active_hours_start_at = 08:29
 active_hours_end_at = 18:45
 
