--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -9,11 +9,11 @@ emergency_address = 115 Hoy Rd, Ithaca, NY 14850
 emergency_message = This is the test message
 
 [naloxone_info]
-naloxone_expiration_date = Sun Apr 9 2023
+naloxone_expiration_date = Sat Dec 2 2023
 absolute_maximum_temperature = 50
 
 [admin]
-passcode = 1234567890
+passcode = 
 admin_phone_number = +15189615258
 enable_sms = True
 
