--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -5,8 +5,8 @@ twilio_phone_number = +18647138522
 
 [emergency_info]
 emergency_phone_number = +15189615258
-emergency_address = 115 Hoy Rd, Ithaca, NY 14850
-emergency_message = This is the test message
+emergency_address = 115 Hoy Road, Ithaca, NY 14850
+emergency_message = hello from the other side
 
 [naloxone_info]
 naloxone_expiration_date = Sun Mar 10 2024
@@ -18,7 +18,8 @@ admin_phone_number = +15189615258
 enable_sms = True
 
 [power_management]
+enable_active_cooling = False
 enable_power_saving = True
-active_hours_start_at = 08:29
+active_hours_start_at = 08:30
 active_hours_end_at = 18:45
 
