--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -6,20 +6,24 @@ twilio_phone_number = +18647138522
 [emergency_info]
 emergency_phone_number = +15189615258
 emergency_address = 115 Hoy Road, Ithaca, NY 14850
-emergency_message = hello from the other side
+emergency_message = hello world
 
 [naloxone_info]
-naloxone_expiration_date = Sun Mar 10 2024
-absolute_maximum_temperature = 140
+naloxone_expiration_date = Fri Feb 3 2023
+absolute_maximum_temperature = 98
 
 [admin]
-passcode = 
+passcode = 123456
 admin_phone_number = +15189615258
 enable_sms = True
+report_door_opened = False
+report_emergency_called = True
+report_naloxone_destroyed = True
+report_settings_changed = False
 
 [power_management]
-enable_active_cooling = False
+enable_active_cooling = True
 enable_power_saving = True
 active_hours_start_at = 08:30
-active_hours_end_at = 18:45
+active_hours_end_at = 09:00
 
