remove the Replace Naloxone button.

--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -10,7 +10,7 @@ emergency_message = hello world
 
 [naloxone_info]
 naloxone_expiration_date = Fri Feb 3 2023
-absolute_maximum_temperature = 98
+absolute_maximum_temperature = 140
 
 [admin]
 passcode = 123456
@@ -20,6 +20,7 @@ report_door_opened = False
 report_emergency_called = True
 report_naloxone_destroyed = True
 report_settings_changed = False
+allow_paramedics = True
 
 [power_management]
 enable_active_cooling = True
