change the layout

--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -16,11 +16,11 @@ absolute_maximum_temperature = 100
 passcode = 123456
 admin_phone_number = +15189615258
 enable_sms = True
-report_door_opened = False
+report_door_opened = True
 report_emergency_called = True
 report_naloxone_destroyed = True
 report_settings_changed = False
-allow_paramedics = True
+allow_paramedics = False
 
 [power_management]
 enable_active_cooling = True
