add more qr code

--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -23,8 +23,8 @@ report_settings_changed = False
 allow_paramedics = False
 
 [power_management]
-enable_active_cooling = False
-enable_power_saving = False
+enable_active_cooling = True
+enable_power_saving = True
 active_hours_start_at = 08:30
 active_hours_end_at = 09:00
 
