convert all processes into threads

--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -9,13 +9,13 @@ emergency_address = 115 Hoy Road, Ithaca, NY 14850
 emergency_message = hello world
 
 [naloxone_info]
-naloxone_expiration_date = Fri Feb 3 2023
-absolute_maximum_temperature = 100
+naloxone_expiration_date = Thu Jan 19 2023
+absolute_maximum_temperature = 121
 
 [admin]
 passcode = 123456
 admin_phone_number = +15189615258
-enable_sms = True
+enable_sms = False
 report_door_opened = True
 report_emergency_called = True
 report_naloxone_destroyed = True
