set to be used on raspberry pi

--- a/main/safety_kit.conf
+++ b/main/safety_kit.conf
@@ -20,7 +20,7 @@ report_door_opened = True
 report_emergency_called = True
 report_naloxone_destroyed = True
 report_settings_changed = False
-allow_paramedics = True
+allow_paramedics = False
 
 [power_management]
 enable_active_cooling = True
