--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .DS_Store
 __pycache__/
 *.py[cod]
-oobe_qt/oobe_qt.pyproject.*
+qt_design/qt_design.pyproject.*
 main/safety_kit.conf
 *.png
-alarm.mp3
-oobe_qt/oobe_qt.pyproject.user
+*.mp3
+qt_design/qt_design.pyproject.user
