--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ qt_design/qt_design.pyproject.*
 main/safety_kit.conf
 *.mp3
 qt_design/qt_design.pyproject.user
+main/admin_qrcode.png
+main/github_qrcode.png
