--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ qt_design/qt_design.pyproject.user
 archive
 main/res/admin_qrcode.png
 main/naloxone_safety_kit.log
+qt_design/main_window.ui.autosave
